--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "next": "13.5.2",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.68.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/prismjs": "^1.26.0"
   }
 }
