--- a/src/app/projects/projects.json
+++ b/src/app/projects/projects.json
@@ -1,81 +1,135 @@
 [
   {
     "id": "1",
-    "title": "_crud-spring",
-    "description": "Basic CRUD to test my skills on building APIs with spring.",
-    "tech": "react",
+    "title": "_js-pokedex",
+    "description": "Pokédex built with HTML, JavaScript and the PokeAPI during Santander Bootcamp 2023",
+    "tech": [
+      {
+        "stack": "html",
+        "alt": "HTML",
+        "color": "#FFA67E"
+      },
+      {
+        "stack": "javascript",
+        "alt": "JavaScript",
+        "color": "#F7DD61"
+      },
+      {
+        "stack": "css",
+        "alt": "CSS",
+        "color": "#95D6F0"
+      }
+    ],
     "view": "https://youtube.com",
     "github": "https://github.com/MarcoVignati"
   },
   {
     "id": "2",
-    "title": "_todo-list",
-    "description": "Basic todo list developed with NodeJs and NextJs.",
-    "tech": "vue",
+    "title": "_angular-blog",
+    "description": "Blog developed in Angular and TypeScript during Santander Bootcamp 2023",
+    "tech": [
+      {
+        "stack": "angular",
+        "alt": "Angular",
+        "color": "#F2A9B9"
+      },
+      {
+        "stack": "typescript",
+        "alt": "TypeScript",
+        "color": "#1990D1"
+      },
+      {
+        "stack": "css",
+        "alt": "CSS",
+        "color": "#95D6F0"
+      }
+    ],
     "view": "https://twitter.com",
     "github": "https://github.com/MarcoVignati"
   },
   {
     "id": "3",
-    "title": "_crud-spring",
-    "description": "Basic CRUD to test my skills on building APIs with spring.",
-    "tech": "react",
+    "title": "_playstation-store-ui",
+    "description": "PlayStation Store replicated with Angular during Santander Bootcamp 2023",
+    "tech": [
+      {
+        "stack": "angular",
+        "alt": "Angular",
+        "color": "#F2A9B9"
+      },
+      {
+        "stack": "typescript",
+        "alt": "TypeScript",
+        "color": "#1990D1"
+      },
+      {
+        "stack": "css",
+        "alt": "CSS",
+        "color": "#95D6F0"
+      }
+    ],
     "view": "https://youtube.com",
     "github": "https://github.com/MarcoVignati"
   },
   {
     "id": "4",
-    "title": "_todo-list",
-    "description": "Basic todo list developed with NodeJs and NextJs.",
-    "tech": "vue",
+    "title": "_job-application-system",
+    "description": "Validation system for jobs aplications built in Java during Santander Bootcamp 2023",
+    "tech": [
+      {
+        "stack": "java",
+        "color": "#F56156",
+        "alt": "Java"
+      }
+    ],
     "view": "https://twitter.com",
     "github": "https://github.com/MarcoVignati"
   },
   {
     "id": "5",
-    "title": "_crud-spring",
-    "description": "Basic CRUD to test my skills on building APIs with spring.",
-    "tech": "react",
-    "view": "https://youtube.com",
+    "title": "_todo-list-service",
+    "description": "API REST built with Spring 3 and Java 17 during Santander Bootcamp 2023",
+    "tech": [
+      {
+        "stack": "spring",
+        "color": "#8BC34A",
+        "alt": "Spring"
+      },
+      {
+        "stack": "java",
+        "color": "#F56156",
+        "alt": "Java"
+      },
+      {
+        "stack": "postgres",
+        "color": "#0277BD",
+        "alt": "Postgres"
+      },
+      {
+        "stack": "railway",
+        "color": "#545260",
+        "alt": "Railway"
+      }
+    ],
+    "view": "https://twitter.com",
     "github": "https://github.com/MarcoVignati"
   },
   {
     "id": "6",
-    "title": "_todo-list",
-    "description": "Basic todo list developed with NodeJs and NextJs.",
-    "tech": "vue",
-    "view": "https://twitter.com",
-    "github": "https://github.com/MarcoVignati"
-  },
-  {
-    "id": "7",
-    "title": "_crud-spring",
-    "description": "Basic CRUD to test my skills on building APIs with spring.",
-    "tech": "react",
-    "view": "https://youtube.com",
-    "github": "https://github.com/MarcoVignati"
-  },
-  {
-    "id": "8",
-    "title": "_todo-list",
-    "description": "Basic todo list developed with NodeJs and NextJs.",
-    "tech": "vue",
-    "view": "https://twitter.com",
-    "github": "https://github.com/MarcoVignati"
-  },
-  {
-    "id": "9",
-    "title": "_crud-spring",
-    "description": "Basic CRUD to test my skills on building APIs with spring.",
-    "tech": "react",
-    "view": "https://youtube.com",
-    "github": "https://github.com/MarcoVignati"
-  },
-  {
-    "id": "10",
-    "title": "_todo-list",
-    "description": "Basic todo list developed with NodeJs and NextJs.",
-    "tech": "vue",
+    "title": "_todo-list-app",
+    "description": "Front-end application that consumes the API built in the Santander Bootcamp 2023",
+    "tech": [
+      {
+        "stack": "nextjs",
+        "color": "#FFFFFF",
+        "alt": "NextJs"
+      },
+      {
+        "stack": "tailwind",
+        "color": "#00ACC1",
+        "alt": "Tailwind"
+      }
+    ],
     "view": "https://twitter.com",
     "github": "https://github.com/MarcoVignati"
   }
